// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`v.never v.never 1`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": null,
  },
]
`;

exports[`v.never v.never 2`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": false,
  },
]
`;

exports[`v.never v.never 3`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": Array [],
  },
]
`;

exports[`v.never v.never 4`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": Object {},
  },
]
`;

exports[`v.never v.never 5`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": 1,
  },
]
`;

exports[`v.never v.never 6`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": 0,
  },
]
`;

exports[`v.never v.never 7`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": NaN,
  },
]
`;

exports[`v.never v.never 8`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": undefined,
  },
]
`;

exports[`v.never v.never 9`] = `
Array [
  Object {
    "path": Array [],
    "schema": Object {
      "type": "Never",
    },
    "value": true,
  },
]
`;
